testcases/6-server-name/httpbin-vs6.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin6
  namespace: httpbin
spec:
  gateways:
  - istio-system/httpbin-gateway6
  hosts:
  - httpbin.example.com
  http:
  - name: http
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
      weight: 100
---
